# rickrock

.github/workflows/: ci.yml
backend/: .env  .gitignore  Cargo.toml  Justfile  clippy.toml  docker-compose.yml  rust-toolchain.toml  rustfmt.toml
backend/migrations/: 0001_user.down.sql  0001_user.up.sql
backend/src/: db.rs  graphql.rs  lib.rs  main.rs  user.rs
backend/src/api/: graphql.rs  mod.rs
backend/src/domain/: mod.rs  user.rs
backend/src/infra/: db.rs  mod.rs  storage.rs
backend/src/service/: create_user.rs  mod.rs  repo.rs
backend/src/service/command/: create_user.rs  handler.rs  mod.rs
backend/src/service/repo/: mod.rs  user.rs
